Se agrego las demás filminas de LP junto con cosas del libro, se paso lo de planeamiento de procesos de SO y se acomodo algunas cosas en ALF

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -91,7 +91,7 @@ Mediante esta dado un determinado automata podemos demostrar que una palabra es 
 
 #### Equivalencia de AFDs
 
-Dado dos autómatas A1 y A2, para comprobar si estos autómatas son equivalentes se utiliza el ***teorema de Moore***.
+Dado dos autómatas $A_1$ y $A_2$, para comprobar si estos autómatas son equivalentes se utiliza el ***teorema de Moore***.
 
 >[!important] Teorema de Moore
 > Dos estados q y q´ son ***compatibles*** si ambos son finales o ninguno de los dos lo es. Si uno es final y el otro no, entonces se dice que son ***incompatibles***.
@@ -114,7 +114,7 @@ Existen dos métodos de simplificación:
 
 1. **Tabla de estados distinguibles**
 	- Dados los estados ***p y q***, ambos son ***distinguibles*** si son ***incompatibles***, es decir, sus transiciones no los llevan a los mismos estados.
-	- Si ***δ(p0 , σ)=p y δ(q0 , σ)=q*** donde p y q son distinguibles, entonces p0y q0 son distinguibles.
+	- Si ***δ(p0 , σ)=p y δ(q0 , σ)=q*** donde p y q son distinguibles, entonces $p_0$ y $q_0$ son distinguibles.
 	- Forma de realizarlo:
 		1. Construir una tabla donde las filas y las columnas son los nombres de los estados.
 		2. Marcar con una x cuando los estados sean distinguibles.
@@ -145,8 +145,8 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 
 >[!important] Relación Lambda
 >Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si en la transición a otro estado no se consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
->- **Clausura transitiva de la relación lambda**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(q, r)*** también poseen una relación lambda.
->- **Clausura transitiva y reflexiva de la relación**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
+>- **Clausura transitiva de la relación lambda ($\Lambda^+$)**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(q, r)*** también poseen una relación lambda.
+>- **Clausura transitiva y reflexiva de la relación ($\Lambda^*$)**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
 
 #### Función de Transición sobre Palabras
 
@@ -158,16 +158,17 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 >1. Se consumen todos los símbolos de entrada.
 >2. Si al terminar la palabra, se llega al estado final.
 >
->El lenguaje aceptado por un AFN, es el conjunto de palabrasaceptadas por él.
+>El lenguaje aceptado por un AFN, es el conjunto de palabras aceptadas por él.
 
 >[!note] Aspectos de diseño del AFNs
 >Al retirar algunas restricciones que tienen los AFD, su diseño para un lenguaje dado puede volverse más simple, a su vez existe si, una dificultad, que radica en lo difícil que es llegar a saber qué camino tomar.
 >Existen dos modelos modulares de diseño de ***autómatas finitos no deterministas***:
->- **AFN para la unión de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr concatenar estos dos lenguajes únicamente se tiene que agregar un estado más que tenga una transición hacia los estados iniciales de cada autómata mediante una relación lambda.
+>
+>- **AFN para la unión de Lenguajes**: Dado dos lenguajes $L_1$ y $L_2$, para lograr unir estos dos lenguajes únicamente se tiene que agregar un estado más que tenga una transición hacia los estados iniciales de cada autómata mediante una relación lambda.
 >
 ><span class="centerImg"> ![[ALF-union-lenguajes.png]] </span>
 >
->- **AFN para la concatenación de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr una concatenación de lenguajes lo que se debe hacer es de los estado finales de un autómata, se crean transiciones vacías (relación lambda) entre los estados finales del primer autómata hacia el estado inicial del segundo autómata. Convirtiendose cada uno de los estado finales del primer autómata en estados no finales.
+>- **AFN para la concatenación de Lenguajes**: Dado dos lenguajes $L_1$ y $L_2$, para lograr una concatenación de lenguajes lo que se debe hacer es de los estado finales de un autómata, se crean transiciones vacías (relación lambda) entre los estados finales del primer autómata hacia el estado inicial del segundo autómata. Convirtiendose cada uno de los estado finales del primer autómata en estados no finales.
 >
 ><span class="centerImg"> ![[ALF-concatenacion-lenguajes.png]] </span>
 
@@ -184,7 +185,7 @@ Para todo AFN N, existe un AFD D tal que L(N) = L(D).
 <span class="centerImg"> ![[ALF-equivalencia1.png]] </span>
 
 Se hace algo parecido al teorema de Moore para demostrar que dos automatas son equivalentes. Con la diferencia que en este caso se van construyendo nuevos grupos de estados y se para una vez que no se forme ningún grupo nuevo. 
-Los estados van a ser finales, y en el conjunto de estados hay al menos un estado final.
+Los estados van a ser finales, si en el conjunto de estados hay al menos un estado final.
 
 - Se puede construir un AFN equivalente a un AFD dado. Utilizando las transiciones ε.
 
