--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
@@ -16,30 +16,30 @@ Consta de 4 pasos:
 >[!Important] Manteniendo la Equivalencia
 >Una vez tenemos todo esto, se crea una nueva gramática donde se van a incluir las reglas en la cual S' deriva en un terminal, y se reemplazaran todas las reglas que tengan al axioma del lado derecho por la que se creó con S', luego se debe verificar que la gramática siga siendo de tipo 3, si no lo es se deben agregar las reglas que sean necesarias para mantener la equivalencia.
 
-1. Se crea un grafo G dirigido.
-	- Para cada A ϵ ΣN U {𝜆} se crea un nodo.
-	- Para cada producción {(A::=aB)/ A, B ∈ ΣN, a ∈ ΣT} se crea un arco etiquetado con **a** que va del nodo A al nodo B.
-	- Para cada producción {(A::= a) / a ∈ ΣT} se crea un arco etiquetado con **a** que va del nodo A al nodo 𝜆.
+2. Se crea un grafo G dirigido.
+	- Para cada A ϵ $Σ_N$ U {𝜆} se crea un nodo.
+	- Para cada producción {(A::=aB)/ A, B ∈ $Σ_N$, a ∈ $Σ_T$} se crea un arco etiquetado con **a** que va del nodo A al nodo B.
+	- Para cada producción {(A::= a) / a ∈ $Σ_T$} se crea un arco etiquetado con **a** que va del nodo A al nodo 𝜆.
 	- Si existe una regla S::= 𝜆, se crea un arco sin etiqueta desde el nodo del axioma al nodo 𝜆.
-1. Se crea otro grafo G' a partir de G.
+3. Se crea otro grafo G' a partir de G.
 	- Se intercambian las etiquetas del axioma, S, y 𝜆. Es decir, donde está el axioma irá el nodo con lambda y donde esta lambda se pondrá el axioma.
 	- Se invierte la dirección de todos los arcos.
-1. Se transforma en un conjunto de reglas.
+4. Se transforma en un conjunto de reglas.
 	- Para cada nodo, se crea un símbolo no terminal de la gramática, excepto para el etiquetado con 𝜆.
-	- Para cada arco que va del nodo al B ∈ ΣN U {𝜆}, se crea la producción A::=Ba.
-	- Si existe un arco del nodo del axioma de 𝜆, se crea una regla S::=𝜆.
+	- Para cada arco que va del nodo al B ∈ $Σ_N$ U {𝜆}, se crea la producción A::=Ba.
+	- Si existe un arco vacío desde el axioma al nodo 𝜆, se crea una regla S::=𝜆.
 
 ## Automatas Finitos Asociados a una Gramática
 
 Dado un autómata se puede obtener la gramática que este representa, para eso se debe tener en cuenta algunas cosas:
 
 1. Si el autómata es ***no determinista***, se lo debe transformar en uno ***determinista***.
-2. Se construyen la gramática equivalente lineal por derecha G = (Σ, Q, q0, P) en la que P:
+2. Se construyen la gramática equivalente lineal por derecha G = (Σ, Q, $q_0$, P) en la que P, quedará conformada de la siguiente manera:
 	- Si **δ(q, a) = p** -> q::= ap.
 	- Si **δ(q, a) = p y p ∈ F** -> q::= a.
-	- Si **q0 ∈ F** -> q0 ::= λ.
+	- Si **$q_0$ ∈ F** -> $q_0$ ::= λ.
 
-También podemos obtener el proceso inverso, dada una gramática podemos obtener el autómata que procesara ese lenguaje, Para eso dada una gramática lineal por derecha G = (ΣT, ΣN, S, P), se construye un autómata A = (ΣT, ΣN U {F}, S, {F}); donde F ∉ ΣN es un nuevo símbolo no terminal, y δ se construye de la siguiente manera:
+También podemos obtener el proceso inverso, dada una gramática podemos obtener el autómata que procesara ese lenguaje, Para eso dada una gramática lineal por derecha G = ($Σ_T$, $Σ_N$, S, P), se construye un autómata A = ($Σ_T$, $Σ_N$ U {F}, S, {F}); donde F ∉ $Σ_N$ es un nuevo símbolo no terminal, y δ se construye de la siguiente manera:
 
 - Si **A::=aB** -> δ(A, a) = B
 - Si **A::=a** -> δ(A, a) = F
