--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -57,7 +57,7 @@ Consiste en colocar los enlaces estáticos en una pila, llamada display. Las ent
 >
 >En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo a la profundidad estática que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea la misma profundidad que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se reemplaza por el nuevo, luego cundo se termina la llamada a ese subprograma, se desapila su IRA del CallStack y se reestablece el puntero anterior en el display.
 
-# Reglas de Alcance Estático
+# Reglas de Alcance Dinámico
 
 Los lenguajes que cuenta con este tipo de reglas de alcance, las referencias se resuelven en tiempo de ejecución siguiendo el flujo de activación de unidades. Supongamos que **A** es un método que realiza una llamada a **B**, en este caso A sería el padre de B. Ahora si en la misma estructura de llamadas, B llama a **C**, B sería el padre de C y A su antepasado.
 
