--- a/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
@@ -47,14 +47,14 @@ O en caso de tomar el segundo concepto, podríamos decir que un sistema de tipos
 >#### Compatibilidad de Tipos
 >
 >Dos tipos de datos T1 y T2, se dicen equivalentes o compatibles si cualquier valor de tipo T1 puede ser asignado a una variable de tipo T2 y viceversa. Existen dos criterios para determinar la equivalencia:
->- **Por Nombre**: Cuando en la declaración de los tipos ambas variables poseen el mismo nombre de tipos. Por ejemplo:
+>- **Por Nombre**: Dos tipos de datos son considerados equivalentes solo si tienen el mismo nombre. Por ejemplo:
 >```Java
 >String nombre;
 >String apellido;
 >```
 >Este criterio es fácil de implementar, es mucho más restrictiva y segura, pero en este caso no van a existir reglas de conversión implícitas.
 >
->- **Por Estructura**: Si ambas variables poseen la misma representación interna. Por ejemplo:
+>- **Por Estructura**: Dos tipos de datos son considerados equivalentes si definen un objeto de datos que tienen los mismos *componentes internos*, esto se refiere a que ambas clases de objetos pueden usar la misma representación interna de memoria. Por ejemplo:
 >```Pascal
 >v1, v2: array [1..10] of int; 
 >
