Correxión de errores de redacción

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
@@ -1,5 +1,5 @@
 
-## Máquina Abstracta Concepto
+## Concepto de Máquina Abstracta
 
 Es un dispositivo teórico capas de recibir y transformar información. Cuentan una serie de propiedades que los caracterizan:
 
@@ -24,13 +24,13 @@ Si un sistema puede describirse mediante un diagrama de estados o a través de l
 - **Máquina de Mealy**: Los valores de salida van a depender de los valores de entrada y del estado en el que se encuentre en ese momento.
 - **Máquina de Moore**: Los valores de salida van a depender únicamente del estado en la que se encuentra la máquina.
 
-Ambas máquinas se definen como una quíntupla: ***ME/MO = (ΣE , ΣS , Q, f, g)***. Donde:
+Ambas máquinas se definen como una quíntupla: ***ME/MO = ($Σ_E$ ,$Σ_S$ , Q, f, g)***. Donde:
 
-- ΣE es el alfabeto de símbolos de entrada.
-- ΣS es el alfabeto de símbolos de salida.
+- $Σ_E$ es el alfabeto de símbolos de entrada.
+- $Σ_S$ es el alfabeto de símbolos de salida.
 - Q es un conjunto finito no vacío de estados.
-- f: Q x ΣE ϵ Q es la función de transición.
-- g: Q x ΣE ϵ ΣS es la función de salida.
+- f: Q x $Σ_E$ ϵ Q es la función de transición.
+- g: Q x $Σ_E$ ϵ $Σ_S$ es la función de salida.
 
 >[!note] Equivalencia entre Máquinas
 >Dos máquinas secuenciales, con los mismos alfabetos de entrada y de salida, son equivalentes cuando para todas las cadenas de símbolos posibles del alfabeto de entrada, las dos máquinas generan las mismas cadenas de símbolos del alfabeto de salida.
