--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -145,7 +145,7 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 
 >[!important] Relación Lambda
 >Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si en la transición a otro estado no se consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
->- **Clausura transitiva de la relación lambda ($\Lambda^+$)**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(q, r)*** también poseen una relación lambda.
+>- **Clausura transitiva de la relación lambda ($\Lambda^+$)**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(p, r)*** también poseen una relación lambda.
 >- **Clausura transitiva y reflexiva de la relación ($\Lambda^*$)**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
 
 #### Función de Transición sobre Palabras
