--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
@@ -46,5 +46,6 @@ También podemos obtener el proceso inverso, dada una gramática podemos obtener
 - Si **S::=λ** -> δ(S, λ ) = F
 
 >[!note] Nota
->F es un nodo final, que comenzaría a formar parte del autómata.
+>- F es un nodo final, que comenzaría a formar parte del autómata.
+>- Solo se puede construir un autómata con gramáticas lineales por derecha, lo que significa que tendremos que transformar a todas las gramáticas lineales por izquierda a lineales por derecha para poder obtener el automáta que procesara ese lenguaje. 
 
