--- a/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 1/1. Repaso Teoría de Sistemas.md
@@ -23,7 +23,7 @@ Explica los sistemas como un todo y no como una suma de partes. Aborda el proble
 
 <span class="centerImg"> ![[MS-elementosSistemas.png]] </span>
 
-- **Entrada**: Constituyen los elementos que ingresan al sistema. Son las fierzas de arranque que suminostram al sistema sus necesidades operativas.
+- **Entrada**: Constituyen los elementos que ingresan al sistema. Son las fierzas de arranque que suministran al sistema sus necesidades operativas.
 - **Proceso**: Constituye la ***transformación*** de las entradas en salidas, como tal puede ser una máquina, un individuo, una computadora, etc. En TGS, existen dos tipos:
 	- **Caja Blanca**: conocemos cómo se realiza la transformación de entradas en salidas.
 	- **Caja Negra**: no se conoce el funcionamiento interno del proceso mediante el cual las entradas se transforman en salidas.
@@ -37,12 +37,12 @@ Explica los sistemas como un todo y no como una suma de partes. Aborda el proble
 
 - **Interacción**: Dentro de un sistema existe una organización en la cual cada elemento cumple una función y ocupa un lugar. Las ***relaciones*** son los enlaces que vinculan entre sí a los distitntos subsistemas que componen un sistema complejo.
 - **Ambiente**: El ambiente es el medio que rodea externamente al sistema, es una fuente de recursos y de amenazas. Se conoce también con el nombre de entorno o contexto. Forma parte de un sistema de mayor magnitud y complejidad que lo condiciona y que constituye su entorno o medio ambiente.
-- **Límites**: Los límites se encuentran vinculados con el ambiente y demarcan el sistema respecto de su ambiente, en principio los límites se marcan en forma arbitraria, para luego realizar ajustes y determinar si ciertas variables pertenecen o no al sistema. Pero si un sistema es encarado desde diferentes niveles puede tener límites distintos.
+- **Límites**: Los límites se encuentran vinculados con el ambiente y demarcan el sistema respecto de su ambiente, en principio los límites se marcan en forma arbitraria, para luego realizar ajustes y determinar si ciertas variables pertenecen o no al sistema. Pero si un sistema es encarado desde diferentes niveles, puede tener límites distintos.
 - **Alcence**: Es necesario comprender las funciones de un sistema, conocer sus finalidades y poder definir sus objetivos, con lo que determinamos el alcance del sistema.
 
 ### Caracteristicas de los Sistemas
 
-- **Entropía**: La entropía de un sistema es el desgaste que el sistema presenta por el transcurso del tiempo o por el funcionamiento del mismo, siendo la impotesis que todo sistema u objeto siempre tiende a volver a su estado primigenio.
+- **Entropía**: La entropía de un sistema es el desgaste que el sistema presenta por el transcurso del tiempo o por el funcionamiento del mismo, siendo la hipótesis que todo sistema u objeto siempre tiende a volver a su estado primigenio.
 - **Neguentropía**: Así como la entropía establece que la materia tiende a descomponerse y a permanecer en un estado de caos continuo, la neguentropía define la energía que tiende a regular el comportamiento de la materia buscando provocar en ella una tendencia al orden, por eso se dice que la ***Información = Neguentropía***.
 - **Homeistasis**: Propiedad de un sistema que define su nivel de respuesta y de adaptación al medio.
 
@@ -50,7 +50,7 @@ Explica los sistemas como un todo y no como una suma de partes. Aborda el proble
 
 Los conceptos de subsistema, sistema y metasistema llevan implícita la idea de recursividad, por cuanto los subsistemas y los metasistemas son además sistemas.
 
-- **Metasistema**: Es aquel sistema que enblova o abarca al sistema que se encuentra bajo estudio.
+- **Metasistema**: Es aquel sistema que engloba o abarca al sistema que se encuentra bajo estudio.
 - **Subsistema**: Cada una de las partes que encierra un sistema puede ser considerada como subsistema, es decir, un conjunto de partes e interrelaciones que se encuentra estructuralmente y funcionalmente, dentro de un sistema mayor, y que posee sus propias características.
 
 >[!info] Tipos de Sistemas
