--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -27,7 +27,7 @@ Los procesos tienen en cuenta las características específicas de los sistemas 
 ##### Modelos de Procesos de Desarrollo de Software
 
 Un modelo de proceso de software es una ***representación simplificada de un proceso***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
-Estos modelos son genéricos y no son descripciones definitivas de los procesos de software, ya que estos son considerados un marco del proceso (framework), que pueden extenderse y adaptarse para crear procesos más específicos de ingeniería de software.
+Estos modelos son genéricos y no son descripciones definitivas de los procesos de software, ya que pueden extenderse y adaptarse para crear procesos más específicos de ingeniería de software.
 
 >[!info] Importante Tener en Cuenta
 >La existencia de un proceso de software no es garantía de que el software se entregue a tiempo o que satisfaga las necesidades de los clientes.
