--- a/3° Año/Metodología de Sistemas I/Unidad 2/2. Tipos de Modelos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/2. Tipos de Modelos.md
@@ -101,7 +101,7 @@ Posee un enfoque más orientado al manejo del ***riesgo***. Es una combinación 
 
 ## Modelo Basado en Componentes o Reutilización
 
-En este modelo, la construcción en su totalidad de cada uno de los proyectos está basado en componentes de software previamente creados y testeados. Al contrario del resto de los procesos de desarrollo, este modelo cuenta con una particularidad propia a la hora de iniciar el proyecto, ya que para en primer lugar se debe realizar el siguiente análisis:
+En este modelo, la construcción en su totalidad de cada uno de los proyectos está basado en componentes de software previamente creados y testeados. Al contrario del resto de los procesos de desarrollo, este modelo cuenta con una particularidad propia a la hora de iniciar el proyecto, ya que en primer lugar se debe realizar el siguiente análisis:
 
 1. **Identificación de componentes**: En esta etapa, se identifican los componentes que se pueden reutilizar en el nuevo proyecto.
 2. **Selección de componentes**: Se seleccionan los componentes que cumplen con los requisitos de funcionalidad, calidad y capacidad de reutilización para el nuevo proyecto.  
@@ -152,3 +152,6 @@ En este modelo, la construcción en su totalidad de cada uno de los proyectos es
 - **Factibilidad Financiera y Económica**: Es una medida de la eficacia de los costos asociados a un proyecto o una solución, recibe el nombre de análisis costo-beneficio. También se contempla si se va a buscar financiación para realizar el proyecto o se lo hará con recursos propios.
 - **Factibilidad de Operacional**: Los proyectos propuestos únicamente tienen beneficio cuando logran ingresar al grupo de sistemas de información que satisfacen los requerimientos de la organización. En pocas palabras, el software va a generar un beneficio si los usuarios lo logran usar debidamente.
 - **Factibilidad de Fechas**: Es una medida del éxito que indica si un proyecto es razonable en el cumplimiento de su calendario. 
+
+>[!tldr] La Factibilidad y su Transversalidad
+>El estudio de factibilidad al igual que muchas otras etapas, son transversales en el proceso de desarrollo de software, esto quiere decir que van a estar presente en todas las etapas del ciclo de vida del software.
