--- a/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
@@ -14,7 +14,7 @@ Todo este proceso se realiza con el único fin de que al terminar este mismo se 
 >[!info] Nota
 >También suele nombrarse como ***especificación de requerimientos de software***.
 
-Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este informe, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo el documento poseerá una u otra sección.
+Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este informe, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo y como no el proceso que se haya elegido para desarrollar ese proyecto el documento poseerá una u otra sección.
 
 #### Técnicas para la Adquisición de Requerimientos
 
