--- a/3° Año/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
+++ b/3° Año/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
@@ -1,6 +1,6 @@
 ### Arranque del Sistema
 
-Para que una computadora comience a funcionar, es necesario que tenga un programa de inicio que ejecutar. Este programa de inicio, o programa de arranque, suele ser simple. Normalmente, se almacena en una memoria ROM o EEPROM y se conoce con el término general de **firmware**, dentro del hardware de la computadora.
+Para que una computadora comience a funcionar, es necesario que tenga un programa de inicio que ejecutar. Este programa de inicio, o programa de arranque, suele ser simple la BIOS o más recientemente la UEFI. Normalmente, se almacena en una memoria ROM o EEPROM y se conoce con el término general de **firmware**, dentro del hardware de la computadora.
 Este programa se encarga de inicializar todos los aspectos del sistema, desde los registros de la CPU hasta las controladoras de dispositivos y el contenido de la memoria. El programa de arranque debe saber como cargar el SO e iniciar la ejecución de dicho sistema. Para conseguir este objetivo, el programa de arranque debe localizar y cargar en memoria el kernel o núcleo del SO. Después, el SO comienza ejecutando el primer proceso, como por ejemplo "init", y espera que produzca algún suceso, la ocurrencia de un suceso normalmente se indica mediante una interrupción bien de hardware o de software.
 
 ### Modo Usuario y Modo Kernel (supervisor)
