Se termino de resumir los contenidos de la primera filmina de procesos (SO)

--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -38,6 +38,18 @@ A medida que se ejecuta un proceso, el proceso va cambiando de **estado**. El es
 - **Terminado:** Ha terminado la ejecución del proceso.
 
 Es importante darse cuenta de que solo puede haber un proceso *ejecutándose* en cualquier procesador en cada instante concreto. Sin embargo, puede haber muchos procesos *preparados* y en *espera*.
+El ciclo normal que sigue un proceso desde su creación hasta su posterior finalización, es el que aparece mostrado en la siguiente imagen:
+
+<span class="centerImg"> ![[SO-estados-proceso.png]] </span>
+
+A lo largo de todo el ciclo de vida del proceso, éste puede cambiar de estado varias veces y estos cambios se denominan ***transiciones de estado*** y son las siguientes:
+
+- Comienzo de la ejecución.
+- Paso a estado de ejecución.
+- Paso a estado de espera o bloqueado.
+- Paso a estado listo o preparado.
+- Paso a estado suspendido en espera o bloqueado.
+- Paso a estado suspendido, listo o preparado.
 
 ## Bloque de control de proceso
 
@@ -59,3 +71,18 @@ En resumen, el PCB sirve simplemente como repositorio para la información varia
 
 >[!note] Anotación de Clase
 >En los sistemas operativos más modernos, el PCB también almacena quien es el propietario del proceso, es decir, el usuario al que pertenece ese proceso o que solicito que se cree dicho proceso. 
+
+## Cambio de Contexto
+
+Cuando se produce una interrupción, el SO tiene que ***guardar el contexto*** del proceso en ejecución, de modo que cuando se retome dicho proceso, la CPU podrá volver a ejecutar el proceso en el punto en el cual lo había dejado.
+El contexto se guarda en la PCB del proceso e incluye los valores de los registros de la CPU, el estado del proceso y la información de gestión de memoria. En pocas palabras, realiza un salvaguardado del estado actual de la CPU, en el modo kernel y en modo usuario, y una restauración del estado para reanudar las operaciones.
+
+>[!note] Contenido de las Diapositivas sobre el Contexto
+>El contexto contiene la información que el S.O. necesita para la administración del proceso y lo que el procesador necesitará para ejecutarlo. Es lo que se graba y recupera en los cambios de proceso. Forman parte del contexto, los registros del procesador, Contador de Programa, La prioridad del Proceso, si hay E/S pendientes, etc.
+
+La conmutación de la CPU a otro proceso requiere un salvaguardado del estado del proceso actual y una restauración del estado del proceso que se va a ejecutar a continuación. La tarea de conmutar estos procesos se conoce como ***cambio de contexto***. Cuando se produce un cambio de contexto, el *kernel* guarda el contexto del proceso antiguo en su PCB y carga el contexto del nuevo proceso que se ha decidido ejecutar. El tiempo dedicado al cambio de contexto es tiempo desperdiciado, ya que el sistema no realiza ningún trabajo útil durante la conmutación.
+
+>[!tldr] Espacio de Direcciones y Entorno
+>Cada proceso, cuando es creado por el SO mediante el planificador a largo plazo, se le asigna un ***Espacio de direcciones***, el cual es un conjunto de direcciones virtuales que va a ocupar el proceso, éste no está incluido en el PCB, ni en ningunas de las tablas asociadas al proceso. Dentro de este espacio de direcciones se encuentra todo el código que puede ser ejecutado por el proceso. Cada proceso puede acceder a su espacio de direcciones en modo usuario, pero las demás operaciones debe hacerlo en *modo kernel*.
+>El ***Entorno***, por su parte, contiene toda la información del proceso, esto incluye al contexto y al espacio de direcciones de dicho proceso.
+
