--- a/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
@@ -25,3 +25,50 @@ Estos procesos se guardan en colas en un dispositivo de almacenamiento masivo (u
 >Por otro lado, el planificador a largo plazo pueden llegar a pasar incluso minutos desde la creación de un nuevo proceso y el siguiente. Además, si el grado de programación es estable, este planificador tendrá que ser invocada cada vez que termina un proceso.
 
 Es importante que el planificador a largo plazo haga una buena elección sobre los procesos que se cargan en memoria, ya que muy a grandes rasgos los procesos pueden ser clasificados como ***orientados a E/S y orientado al procesador***, los primeros van a estar mucho más tiempo esperando por E/S y no pasaran casi nada de tiempo en la cola de listos, por lo que el planificador a corto plazo tendrá casi nula actividad; mientras que los segundos es todo lo contrario van a estar haciendo uso en todo momento de la CPU y casi nunca realizando una E/S. Por este motivo el planificador a largo plazo tiene que buscar un equilibrio entre estos tipos de procesos para que todo funcione lo más óptimo posible.
+
+# Algoritmo de Planificación de Procesos
+
+La planificación del procesador es una función fundamental del Sistema Operativo. Siendo el procesador uno de los principales recursos útiles, la planificación de su uso es muy importante. Se debe buscar maximizar la utilización del procesador. En un ambiente de multiprogramación, el Sistema Operativo debe decidir a qué proceso le dá el procesador para que lo ejecute entre los procesos de la cola de listos.
+Con el fin de que este todo lo más organizada posible, el SO organiza a los procesos en colas, existen una cola en particular, que es denominada la ***cola de trabajos listos*** o simplemente ***cola de listos***.
+Para la planificación existen módulos del Sistema Operativo que eligen un proceso desde las distintas colas y le asignan el procesador. Estos módulos tienen una alta prioridad de ejecución, ya que también necesitan del procesador para ejecutarse.
+
+### Políticas de Planificación
+
+- **Políticas sin desalojo**: Un proceso no deja el procesador desde que se le es asignado dicho recurso, hasta que se termine o pasa a estado de espera.
+- **Políticas con desalojo**: El proceso que se está ejecutando puede ser suspendido temporalmente para darle paso a otro proceso. Hay un temporizador.
+
+>[!example] Medidas de Tratamiento
+>- **Tiempo de servicio o retorno (T)**: T = $t_f$ - $t_i$
+>	- $t_i$ es el instante en el que se le da la orden de creación al proceso.
+>	- $t_f$ instante en el que el proceso termina su ejecución.
+>- **Tiempo de espera (E)**: E = T - t
+>	- t es el tiempo de ejecución (el tiempo que necesita para realizar su trabajo)
+>- **Índice de servicio (I)**: I = t / T el resultado en un valor entre 0 y 1
+>
+>Para más de un proceso se usan valores medios que reflejarán el verdadero comportamiento del sistema y son:
+>- Tiempo medio de servicio o retorno.
+>- Tiempo medio de espera
+>- Eficiencia (es la media del índice de servicio)
+
+## Algoritmos de Planificación
+
+- **First Came, First Served (FCFS)**: El procesador atiende a un proceso hasta que termina su ejecución y luego atiende al que sigue en la cola de listos. Características:
+	- Es justa, atiende a todos los procesos.
+	- Es una política predecible.
+	- Los procesos largos hacen esperar a los cortos.
+
+<span class="centerImg"> ![[SO-FCFS.png]] </span>
+
+- **Shortest Job First (SJF)**: Toma de la cola de procesos listos el que necesite menos tiempo de ejecución para realizar su trabajo. El tiempo de ejecución de un proceso se puede saber por el propio programa, por usuario o ejecución anterior. Si dos procesos tienen el mismo tiempo de ejecución, se desempatan usando el método FCFS. Características:
+	- Es injusta con procesos largos.
+	- Es poco predecible.
+	- Difícil puesta en práctica por la información que necesita.
+
+<span class="centerImg"> ![[SO-SJF.png]] </span>
+
+- **Shortest Remaining Time First (SRTF)**: Cambia el proceso que está en ejecución, cuando llega un proceso con una exigencia más corta en el tiempo de ejecución de lo que resta para finalizar al proceso en ejecución. Es una mejora del SJF. Características:
+	- Es muy eficiente.
+	- Excelente tiempo medio de servicio.
+	- Puede ser injusta, ya que un proceso corto puede sacar a uno largo que esté ejecutándose y tal vez terminándose.
+
+<span class="centerImg"> ![[SO-SRTF.png]] </span>
