Correcciones al resumens de SO y se agrego mas info en algunas partes del resumen de MS-I

--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -72,6 +72,15 @@ En resumen, el PCB sirve simplemente como repositorio para la información varia
 >[!note] Anotación de Clase
 >En los sistemas operativos más modernos, el PCB también almacena quien es el propietario del proceso, es decir, el usuario al que pertenece ese proceso o que solicito que se cree dicho proceso. 
 
+>[!tldr] El Bloque de Control de Sistema
+>En los sistemas operativos, el Bloque de Control de Sistema (Sistema Control Block, SCB en inglés) es una estructura de datos utilizada por el sistema operativo para administrar y mantener información sobre el estado de un sistema en general. Esto puede incluir información como
+>- **Configuraciones del sistema**: detalles sobre el hardware del sistema, configuraciones de red, configuraciones de seguridad, entre otros.
+>- **Manejo de errores**: información sobre los errores que ocurrieron en el sistema, lo que puede ayudar en la depuración y la resolución de problemas.
+>- **Información de rendimiento**: estadísticas sobre el rendimiento del sistema, como la utilización del CPU, la memoria, la red, etc.
+>- Información del estado de los procesos en ejecución, los recursos utilizados por cada proceso, la utilización del sistema, etc.
+> 
+>El propósito principal del Bloque de Control de Sistema es proporcionar una manera centralizada para el sistema operativo de administrar y controlar todos los aspectos del sistema. También ayuda a mantener la estabilidad y la eficiencia del sistema, permitiendo que el sistema operativo tenga una visión general completa del estado del sistema en todo momento.
+
 ## Cambio de Contexto
 
 Cuando se produce una interrupción, el SO tiene que ***guardar el contexto*** del proceso en ejecución, de modo que cuando se retome dicho proceso, la CPU podrá volver a ejecutar el proceso en el punto en el cual lo había dejado.
