--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -1,5 +1,8 @@
->[!important] ¿Que es en si un Modelo de Ciclo de Vida?
+>[!tldr] ¿Que es en si un Modelo de Ciclo de Vida?
 >No es mas que un conjunto de actividades o pasos que hay que seguir con el objetivo de crear un software, con la mejor calidad posible, acorde a las necesidades y requerimientos de los usuarios.
+
+>[!important] Respuesta del GPT
+>Un modelo de ciclo de vida en el desarrollo de software es un marco conceptual que describe las fases por las que pasa un sistema de software desde su concepción hasta su retiro o finalización. Las etapas incluyen la recolección de requisitos, diseño, implementación, pruebas, mantenimiento y eventualmente el retiro del sistema.
 
 El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, nace de la mano de la Ingeniería de software, que a su vez apareció después de la llamada gran crisis del software de finales de los años 60'. 
 
@@ -11,7 +14,10 @@ El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, 
 
 #### Procesos
 
-Un proceso de software es un conjunto de ***actividades relacionadas*** que conducen a la elaboración de un producto de software. En pocas palabras es la forma en la que trabajamos en dicho desarrollo. Dicho desarrollo puede empezar completamente desde cero, comenzar extendiendo un sistema ya existente o modificando un sistema ya existente.
+>[!important] Respuesta del GPT
+>Un proceso de software es un conjunto de actividades, métodos, prácticas y transformaciones que se utilizan para desarrollar y mantener software y los productos asociados, como la documentación del proyecto. Un proceso de software sirve como un mapa de ruta para el desarrollo de software, proporcionando una estructura y orden al esfuerzo de desarrollo. Es esencial para organizar el trabajo y garantizar la calidad del software producido.
+
+Un proceso de software es un conjunto de ***actividades relacionadas*** que conducen a la elaboración de un producto de software. En pocas palabras es la forma en la que trabajamos en dicho desarrollo. Este desarrollo puede empezar completamente desde cero, comenzar extendiendo un sistema ya existente o modificando un sistema ya existente.
 Todos los procesos de software incluyen cuatro actividades fundamentales:
 1. **Especificación**: Se define la funcionalidad del software y las restricciones de su operación.
 2. **Diseño e implementación**: Se desarrolla el software para cumplir con las especificaciones.
@@ -25,6 +31,9 @@ Cabe resaltar que no existe un proceso ideal, ya que esto va a variar dependiend
 Los procesos tienen en cuenta las características específicas de los sistemas (sistemas críticos, empresariales, etc.); cuyo principal propósito siempre es entregar a tiempo el software y con calidad para satisfacer a quienes patrocinaron su creación y a aquellos que lo usarán.
 
 ##### Modelos de Procesos de Desarrollo de Software
+
+>[!important] Respuesta del GPT
+>Un proceso de desarrollo de software es una estructura establecida y estandarizada que se utiliza para conceptualizar, diseñar, implementar y probar nuevas aplicaciones o programas de software. Es una serie de tareas específicas que deben realizarse de manera sistemática para garantizar el éxito del desarrollo de software.
 
 Un modelo de proceso de software es una ***representación simplificada de un proceso***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
 Estos modelos son genéricos y no son descripciones definitivas de los procesos de software, ya que pueden extenderse y adaptarse para crear procesos más específicos de ingeniería de software.
